# pants-basedpyright

./: README.md  pre-commit  pyproject.toml
pants-basedpyright/: fieldset.py  partition.py  register.py  request.py  rules.py  subsystem.py
pants_basedpyright/: fieldset.py  partition.py  request.py  rules.py  skip_field.py  subsystem.py
pants_basedpyright/tests/: rule_integration_test.py
